# xeno_ros

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-modules/: FindXenomai.cmake  PocoNetConfig.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  xeno_poco  xeno_poco.cpp
